# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: chapter_example.cmake  libs.cmake
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
learn_opengl/: CMakeLists.txt
learn_opengl/include/: camera.hpp  mesh.hpp  model.hpp  shader.hpp
learn_opengl/lib/: CMakeLists.txt
learn_opengl/lib/include/glad/: glad.h
learn_opengl/lib/src/: glad.c
learn_opengl/src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
lib/: CMakeLists.txt  lib.c  lib.h
lib/include/: camara.h  file_handling.h  lib.h  shader.h  shader2.h  shader_type.h
lib/src/: camara.c  file_handling.c  lib.c  shader.c  shader2.c  shader_type.c
shaders/: 2.2.basic_lighting.frag  3.1.materials.frag  5.1.shader.vert
shaders/lighting/: 4.2.lighting_maps.frag  5.light_casters.frag
shaders/model_loading/: 2.model_loading.frag  2.model_loading.vert
src/: CMakeLists.txt  main.c
src/getting_started/: camara.c  coordinate_systems.c  hello_triangle.c  shaders.c  textures.c  transformations.c
src/lighting/: 1.colors.c
src/lighting/shaders/: 1.colors.fs
tests/: CMakeLists.txt
tests/lib/: file_handling_test.c  lib_test.c  shader_test.c
